fix stats wrong size of board

--- a/web/front/src/page/all_game/MorpionDisplay/Morpion/Board/Board.scss
+++ b/web/front/src/page/all_game/MorpionDisplay/Morpion/Board/Board.scss
@@ -12,6 +12,5 @@
     .square {
         @include mix.default_card;
         font-size: 2rem;
-		min-height: 150px;
     }
 }
