--- a/web/front/src/page/all_game/MorpionDisplay/MorpionDisplay.scss
+++ b/web/front/src/page/all_game/MorpionDisplay/MorpionDisplay.scss
@@ -15,6 +15,9 @@
 		@include mix.full;
 		display: flex;
 		align-items: center;
+		.Board-root {
+			min-height: 150px;
+		}
 	}
 
 	.MorpionDisplay-content {
